# vid-cleaner

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  TODO.md  codecov.yml  committed.toml  duties.py  pyproject.toml
.github/: dependabot.yml  labeler.yml
.github/actions/setup-poetry/: action.yml
.github/workflows/: automated-tests.yml  commit-linter.yml  create-release.yml  manual_pypy_publish.yml  pypi-release.yml  reusable-tests.yml  update-codecov.yml
src/vid_cleaner/: __version__.py  cli.py  config.py  constants.py  default_config.toml  vid_cleaner.py  vidcleaner.py
src/vid_cleaner/cli/: cache.py  clean.py  clean_video.py  clip.py  clip_video.py  inspect.py  inspect_video.py  search.py
src/vid_cleaner/config/: config.py  default_config.toml
src/vid_cleaner/controllers/: temp_files.py
src/vid_cleaner/models/: video_file.py
src/vid_cleaner/utils/: __init__.py  api_utils.py  cli.py  config.py  console.py  ffmpeg_utils.py  filesystem_utils.py  helpers.py  logging.py  printer.py
src/video_transcode/: __init__.py  __version__.py  cli.py  constants.py
src/video_transcode/config/: __init__.py  config.py
src/video_transcode/models/: __init__.py  video_file.py
src/video_transcode/utils/: __init__.py  errors.py  helpers.py  logging.py
tests/: __init__.py  conftest.py  pytest_functions.py  test_cache.py  test_clean.py  test_cli.py  test_clip.py  test_config.py  test_helpers.py  test_inspect.py  test_script_utils.py  test_search.py  test_utilities.py  test_video_file.py
